Adding img assets and gitignore file

--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,6 @@ body *{
 
 .govuk-block{
     font-family: Flow Circular, sans-serif !important;
-
 }
 
 .govuk-header, .govuk-footer{
@@ -33,7 +32,7 @@ body *{
 .govuk-input {
     border-style: solid;
     border-width: 5px;
-    border-image: url(../images/wireframe-assets/border.svg) 10 10 10 10 stretch stretch;
+    border-image: url(/plugin-assets/govuk-design-system-wireframe-plugin/assets/border.svg) 10 10 10 10 stretch stretch;
   }
 
   .govuk-tag{
@@ -43,7 +42,7 @@ body *{
 
   .govuk-checkboxes__input, .govuk-select, .govuk-textarea {
     border-width: 6px 6px 6px 6px;
-    border-image: url(../images/wireframe-assets/checkbox.svg) 6 6 6 6 stretch stretch;
+    border-image: url(/plugin-assets/govuk-design-system-wireframe-plugin/assets/checkbox.svg) 6 6 6 6 stretch stretch;
   }
   
   .govuk-panel--confirmation{
